--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxRejected.html.twig
@@ -59,7 +59,7 @@
 					&nbsp;
 					</td>
 					<td>
-						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|data_link(notification.revision.id)|raw }}
+						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|emsco_data_link(notification.revision.id)|raw }}
 
 					<td>
 						<div class="btn-group">
