--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
@@ -47,7 +47,7 @@
                               	class="img-responsive center-block"
                               >
             				<div class="carousel-caption">
-                              	<div class="btn-group text-center">{{ (item._source._contenttype~':'~item._id)|data_link|raw }}</div>
+                              	<div class="btn-group text-center">{{ (item._source._contenttype~':'~item._id)|emsco_data_link|raw }}</div>
             				</div>
                             </div>
                         {% endfor %}
