--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_view.html.twig
@@ -10,7 +10,7 @@
                 <div class="box-header with-border">
                     <h2 class="box-title">
                         {{ 'Reorganise: '|trans }}
-                        {{ (parent._source._contenttype~':'~parent._id)|data_link }}
+                        {{ (parent._source._contenttype~':'~parent._id)|emsco_data_link }}
                     </h2>
                 </div>
                 {{ form_start(form) }}
