--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/sent.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/sent.html.twig
@@ -65,7 +65,7 @@
 									&nbsp;
 									</td>
 									<td>
-										{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|data_link(notification.revision.id)|raw }}
+										{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|emsco_data_link(notification.revision.id)|raw }}
 
 									<td>
 										<div class="btn-group">
