--- a/EMS/core-bundle/src/Resources/views/elements/object-toolbar.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elements/object-toolbar.html.twig
@@ -22,7 +22,7 @@
 					'icon': 'archive'
 				}%}
 				{% if is_granted(contentType.roles.edit) %}
-					{% if not  contentType.circlesField or attribute(source, contentType.circlesField) is not defined or attribute(source, contentType.circlesField)|in_my_circles %}
+					{% if not  contentType.circlesField or attribute(source, contentType.circlesField) is not defined or attribute(source, contentType.circlesField)|emsco_in_my_circles %}
 						{% include '@EMSCore/elements/post-button.html.twig' with {
 							'url': path('revision.new-draft', {'ouuid': ouuid, 'type': contentType.name}),
 							'label': info.draft ? 'views.elements.object-toolbar-html.edit-draft'|trans : 'views.elements.object-toolbar-html.new-draft'|trans,
