--- a/EMS/core-bundle/src/Resources/views/notification/inboxToTreat.html.twig
+++ b/EMS/core-bundle/src/Resources/views/notification/inboxToTreat.html.twig
@@ -3,7 +3,7 @@
 		{% if notifications|length <= 0  %}
 			<p>{{ 'No result for this filters combinaison'|trans }}: <a href="{{ path('notifications.inbox') }}">{{ 'reset filters' }}</a></p>
 		{% else %}
-				
+
 		<div class="table-responsive">
 		<table class="table table-condensed table-striped">
 			<tbody>
@@ -52,7 +52,7 @@
 					&nbsp;
 					</td>
 					<td>
-						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|data_link(notification.revision.id)|raw }}
+						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|emsco_data_link(notification.revision.id)|raw }}
 
 					<td>
 						<div class="btn-group">
@@ -67,21 +67,21 @@
 								'currentTemplate': notification.template
 							}%}
 	                    </div>
-	         
+
 					</td>
 				</tr>
 			{% endfor %}
 		</table>
 		</div>
 	<div class="">
-		<div class="btn-group">					
+		<div class="btn-group">
 			<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#treatNotificationsModal">
 			  <i class="fa fa-gear"></i> Treat selection
 			</button>
 		</div>
 		{% endif %}
 	</div>
-	
+
 
 
 	<!-- Modal -->
@@ -98,7 +98,7 @@
       		{{ form_row(treatform.publishTo) }}
 	      </div>
 	      <div class="modal-footer">
-	      
+
 			<div class="btn-group">
               	{{ form_widget(treatform.accept, { 'attr': { 'disabled': true } }) }}
               	{{ form_widget(treatform.reject) }}
@@ -107,6 +107,6 @@
 	    </div>
 	  </div>
 	</div>
-		
+
 	{{ form_widget(treatform.notifications) }}
 {{ form_end(treatform) }}
