--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/custom-view.xml.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/custom-view.xml.twig
@@ -1,4 +1,4 @@
-{{ template.body|generate_from_template( {
+{{ template.body|emsco_generate_from_template( {
 										environment: environment,
 										contentType: contentType,
 										object: object,
