--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/keywords_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/keywords_view.html.twig
@@ -9,7 +9,7 @@
 
 <div class="row">
 	{% for keyword in keywords %}
-		{{ view.options.template|generate_from_template({keyword: keyword})|raw }}
+		{{ view.options.template|emsco_generate_from_template({keyword: keyword})|raw }}
 	{% endfor %}
 </div>
 {% endblock %}
