--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
@@ -15,7 +15,7 @@
 					{%if template.role == "not-defined" or is_granted(template.role) and (template.environments is empty or environment in template.environments or template.isEnvironmentExist(environment.name)) %}
 
 						{% if template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::EXTERNALLINK') %}
-							{% set link = template.body|generate_from_template({
+							{% set link = template.body|emsco_generate_from_template({
 									environment: environment,
 									contentType: contentType,
 									object: object,
@@ -30,7 +30,7 @@
 
 						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::RAW_HTML') %}
 							{%- if (is_granted(template.role)) or template.role == "not-defined" -%}
-								{%- set rawHTML = template.body|generate_from_template({
+								{%- set rawHTML = template.body|emsco_generate_from_template({
 									environment: environment,
 									contentType: contentType,
 									object: object,
