--- a/EMS/core-bundle/src/Resources/views/data/custom-view.xml.twig
+++ b/EMS/core-bundle/src/Resources/views/data/custom-view.xml.twig
@@ -1,4 +1,4 @@
-{{ template.body|generate_from_template( {
+{{ template.body|emsco_generate_from_template( {
 										environment: environment,
 										contentType: contentType,
 										object: object,
