ref: propertyPath filter is deprecated (no docs)

--- a/EMS/core-bundle/src/Resources/views/data/ajax-revision.json.twig
+++ b/EMS/core-bundle/src/Resources/views/data/ajax-revision.json.twig
@@ -4,8 +4,8 @@
    {% if formErrors|length > 0 %}
 		"formErrors": [
 		{% for error in formErrors %}
-			{ 
-				"propertyPath": {{ error|propertyPath|json_encode|raw }},
+			{
+				"propertyPath": {{ error|emsco_property_path|json_encode|raw }},
 				"message": {{ error.message|json_encode|raw }}
 			}
 			{% if not loop.last %},{% endif %}
