--- a/demo/skeleton/template_ems/view/overview.twig
+++ b/demo/skeleton/template_ems/view/overview.twig
@@ -54,7 +54,7 @@
         ]) %}
     {% endif %}
 
-    {% set infoEnv = 'overview.legend'|i18n('en') %}
+    {% set infoEnv = 'overview.legend'|emsco_i18n('en') %}
     <div class="mb-3">
         <h4>Legend for Live</h4>
         {% for info in infoEnv|ems_json_decode %}
