--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/columns/release-revisions.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/columns/release-revisions.html.twig
@@ -21,7 +21,7 @@
 {% block revision %}
     {% if data.revision %}
         <a href="{{ path('emsco_view_revisions', {ouuid: data.revisionOuuid, type: data.contentType.name, revisionId: data.revision.id}) }}">
-            {{ 'release.release-revisison.revision'|trans({ '%date%' : data.revision.created|date(date_time_format) ,'%user%' : data.revision.finalizedBy|default('')|displayname }) }}
+            {{ 'release.release-revisison.revision'|trans({ '%date%' : data.revision.created|date(date_time_format) ,'%user%' : data.revision.finalizedBy|default('')|emsco_display_name }) }}
         </a>
     {% else %}
         {% set info = data.emsId|emsco_document_info %}
@@ -43,7 +43,7 @@
 {% block previous %}
     {% if data.revisionBeforePublish %}
         <a href="{{ path('emsco_view_revisions', {ouuid: data.revisionBeforePublish.ouuid, type: data.revisionBeforePublish.contentType.name, revisionId: data.revisionBeforePublish.id}) }}">
-            {{ 'release.release-revisison.revision'|trans({ '%date%' : data.revisionBeforePublish.created|date(date_time_format) ,'%user%' : data.revisionBeforePublish.finalizedBy|default('')|displayname }) }}
+            {{ 'release.release-revisison.revision'|trans({ '%date%' : data.revisionBeforePublish.created|date(date_time_format) ,'%user%' : data.revisionBeforePublish.finalizedBy|default('')|emsco_display_name }) }}
         </a>
     {% else %}
         <span class="text-muted">
