--- a/EMS/core-bundle/src/Resources/views/notification/sent.html.twig
+++ b/EMS/core-bundle/src/Resources/views/notification/sent.html.twig
@@ -41,7 +41,7 @@
 										<i class="{{notification.template.icon}}"></i> {{ notification.template.label }}
 
 									</td>
-									<td>{{ notification.username|displayname }}</td>
+									<td>{{ notification.username|emsco_display_name }}</td>
 									<td>{{ notification.created|date|date(date_time_format) }}</td>
 									<td>
 										<span class="badge bg-{{ notification.environment.color|raw }}">{{ notification.environment.name }}</span>
