ref: call_user_func filter is deprecated

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder_item.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder_item.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'EMSCoreBundle' %}
 {% for child in parent.children|filter(child => not child.deleted) %}
-	<li id="{{ child.id }}" class="{% if not (child.type~'::isContainer')|call_user_func %}mjs-nestedSortable-no-nesting{% endif %}">
+	<li id="{{ child.id }}" class="{% if not (child.type~'::isContainer')|emsco_call_user_func %}mjs-nestedSortable-no-nesting{% endif %}">
 		<div class="card-header">
 			<strong>{{ child.name }}</strong> {{ child.type }}
 			<div class="btn-group float-end">
@@ -12,7 +12,7 @@
 				{% endif %}
 			</div>
 		</div>
-		{% if (child.type~'::isContainer')|call_user_func and child.children|length > 0 %}
+		{% if (child.type~'::isContainer')|emsco_call_user_func and child.children|length > 0 %}
 			<ol>
 				{% include "@EMSAdminUI/bootstrap5/contenttype/reorder_item.html.twig" with {
 					parent: child
